# wbc-g1-deploy

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  NOTICE  README.md  main.cpp  pixi.toml
apps/: CMakeLists.txt
apps/wbc_g1_ctrl/: main.cpp
apps/wbc_ref_listen/: main.cpp
apps/wbc_ref_pub/: main.cpp
apps/wbc_reference_node/: main.cpp
config/: config.yaml  policy_defaults.yaml  robot_defaults.yaml
config/clips/: dance_01.npz  dance_02.npz  dance_03.npz  fight_combo_02.npz  flip_01.npz  flip_02.npz  flip_03.npz  flip_04.npz  getup_01.npz  idle_02.npz  liedown_01.npz  manifest.yaml  run_01.npz  run_03.npz  sprint_01.npz  sprint_02.npz  walk_01.npz  walk_02.npz  walk_03.npz
config/policy/wbc/params/: config.yaml  policy.onnx  policy_new.onnx  policy_old.onnx
config/policy/zest/params/: config.yaml  policy.onnx
docs/: ARCHITECTURE.md  DEPLOY.md  architecture.md  gen_controller.md  operator.md
export/: README.md  __init__.py  add_clip.py  convert_tracking_params.py  g1_body_names.py  pack_policy_bundle.py  test_convert_tracking_params.py
include/: DdsMotionReference.h  GenReferenceEngine.h  IMotionReference.h  MotionClipLibrary.h  State_WbcTracking.h  WbcMotionLoader.h  WbcReferencePublisher.h  g1_body_names.h  gen_obs_builder.h  gen_params.h  gen_waypoints.h  joystick_expr.h  motion_npz.h  motion_reference_obs.h  pack_arc_reference.h  param.h  pd_torque_clip.h  unitree_articulation.h  wbc_entry_mode.h  wbc_mdp_registrations.h  wbc_tracking_params.h
include/FSM/: State_FixStand.h  State_FloorReady.h  fsm_pose_utils.h
include/idl/: WbcReference.hpp  WbcReference.idl
include/isaaclab/algorithms/: algorithms.h
include/isaaclab/assets/articulation/: articulation.h
include/isaaclab/envs/: manager_based_rl_env.h
include/isaaclab/envs/mdp/observations/: observations.h
robots/g1/: CMakeLists.txt  main.cpp
robots/g1/config/: config.yaml  policy_defaults.yaml
robots/g1/config/clips/: manifest.yaml
robots/g1/config/policy/wbc/params/: deploy.yaml  latest.onnx  wbc_tracking_params.yaml
robots/g1/include/: State_WbcTracking.h
robots/g1/src/: State_WbcTracking.cpp  wbc_tracking_params.cpp
scripts/: bootstrap_thirdparty.sh  generate_idl.sh  run_gen_controller.sh  slice_trajectories.py
src/: DdsMotionReference.cpp  GenReferenceEngine.cpp  MotionClipLibrary.cpp  State_WbcTracking.cpp  WbcMotionLoader.cpp  WbcReferencePublisher.cpp  gen_obs_builder.cpp  gen_params.cpp  gen_waypoints.cpp  motion_npz.cpp  motion_reference_obs.cpp  pack_arc_reference.cpp  pd_torque_clip.cpp  wbc_mdp_registrations.cpp  wbc_tracking_params.cpp
src/idl/: WbcReference.cpp
tools/: deploy.py
